# linear_regression_testing

./: README.md  pyproject.toml  readme.md
src/linear_regression_test/: regression_test.py  utils.py
tests/: build_testing_data.R  test_regression.py
tests/testing_data/: R_results.csv  multivariate_n10.csv  multivariate_n15.csv  multivariate_n20.csv  multivariate_subset_n10.csv  multivariate_subset_n15.csv  multivariate_subset_n20.csv  univariate_n10.csv  univariate_n15.csv  univariate_n20.csv  univariate_subset_n10.csv  univariate_subset_n15.csv  univariate_subset_n20.csv
