[tool.poetry]
name = "linear_regression_testing"
version = "0.1.0"
description = "Python code for permutation testing of liniear regression models"
authors = ["MatthewCorney <Matthew_corney@yahoo.co.uk>"]
readme = "README.md"
packages = [{include = "linear_regression_testing"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
pytest = "^8.3.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
